fixed broken css on bundle item images

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -22,13 +22,13 @@ body {
 
 @media only screen and (max-width: 500px) {
   body {
-    font-size: 0.8em;
+    font-size: 0.9em;
   }
 }
 
 @media only screen and (min-width: 500px) and (max-width: 800px) {
   body {
-    font-size: 0.9em;
+    font-size: 0.95em;
   }
 }
 
